--- a/pom.xml
+++ b/pom.xml
@@ -3,11 +3,10 @@
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>aka-dbutils-spring-resttemplate-starter</artifactId>
 	<groupId>com.github.ulwx</groupId>
-	<version>2.0-SNAPSHOT</version>
 	<parent>
 		<groupId>com.github.ulwx</groupId>
 		<artifactId>aka-common-parent</artifactId>
-		<version>2.0-SNAPSHOT</version>
+		<version>2.0</version>
 		<relativePath>../aka-common-parent/pom.xml</relativePath>
 	</parent>
 	<properties>
